# src/server/services/index.ts
@@ -5,3 +5,8 @@ export * from "./blog.service";
 export * from "./contact.service";
 export * from "./settings.service";
 export * from "./base.service";
+export * from "./message.service";
+export * from "./skill.service";
+export * from "./tech-stack.service";
+export * from "./subscriber.service";
+export * from "./email.service";
